--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+        </dependency>
+
+
     </dependencies>
 
 <!--    <build>-->
